--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@syncify/cli",
   "description": "The next generation build tool for Shopify theme development.",
-  "version": "0.1.2-beta",
+  "version": "0.1.3-beta",
   "license": "MIT",
   "homepage": "https://github.com/panoply/syncify",
   "bugs": "https://github.com/panoply/syncify/issues",
@@ -32,7 +32,8 @@
     "shopify theme",
     "shopify node",
     "shopify theme",
-    "shopify sync"
+    "shopify sync",
+    "shopify cli"
   ],
   "engines": {
     "pnpm": ">=7",
@@ -66,69 +67,91 @@
   },
   "dependencies": {
     "anymatch": "^3.1.3",
-    "axios": "^1.2.3",
+    "axios": "^1.4.0",
     "chokidar": "^3.5.3",
     "cross-spawn": "^7.0.3",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.3.1",
     "fast-glob": "^3.2.12",
     "finalhandler": "^1.2.0",
-    "fs-extra": "^11.1.0",
+    "fs-extra": "^11.1.1",
     "gray-matter": "^4.0.3",
-    "html-minifier-terser": "7.1.0",
-    "load-tsconfig": "^0.2.3",
+    "html-minifier-terser": "7.2.0",
+    "load-tsconfig": "^0.2.5",
     "markdown-it": "^13.0.1",
     "mime-types": "^2.1.35",
-    "minimist": "^1.2.7",
+    "minimist": "^1.2.8",
     "node-notifier": "^10.0.1",
     "prompts": "^2.4.2",
     "serve-static": "^1.15.0",
-    "turndown": "^7.1.1",
+    "turndown": "^7.1.2",
     "turndown-plugin-gfm": "^1.0.2",
-    "ws": "^8.12.0"
+    "ws": "^8.13.0"
   },
   "devDependencies": {
     "@sissel/eslint-config": "^1.1.0",
     "@sissel/prettier-config": "^1.1.0",
     "@types/finalhandler": "^1.2.0",
     "@types/fs-extra": "^11.0.1",
-    "@types/mergerino": "^0.4.0",
     "@types/mime-types": "^2.1.1",
     "@types/minimist": "^1.2.2",
-    "@types/serve-static": "^1.15.0",
-    "@types/sharp": "^0.31.1",
+    "@types/serve-static": "^1.15.2",
     "@types/svg-sprite": "^0.0.34",
-    "@types/ws": "^8.5.4",
+    "@types/ws": "^8.5.5",
     "ansis": "^1.5.5",
-    "ava": "^5.1.1",
-    "clean-stack": "^5.1.0",
-    "esbuild": "^0.17.3",
-    "eslint": "^8.32.0",
+    "ava": "^5.3.1",
+    "clean-stack": "^5.2.0",
+    "esbuild": "^0.18.10",
+    "eslint": "^8.43.0",
     "log-update": "^5.0.1",
     "mergerino": "^0.4.0",
     "mithril": "^2.2.2",
-    "p-queue": "^7.3.0",
-    "postcss": "^8.4.21",
-    "prettier": "^2.8.3",
-    "rambdax": "^9.0.0",
-    "sass": "^1.57.1",
+    "p-queue": "^7.3.4",
+    "postcss": "^8.4.24",
+    "prettier": "^2.8.8",
+    "rambdax": "^9.1.1",
+    "sass": "^1.63.6",
+    "sharp": "^0.32.1",
     "strip-json-comments": "^5.0.0",
     "svg-sprite": "^2.0.2",
     "svgo": "^3.0.2",
+    "tailwindcss": "^3.3.2",
     "tiny-spinner": "^2.0.0",
     "tsconfig-type": "^1.27.0",
-    "tsup": "^6.5.0",
-    "type-fest": "^3.5.2",
-    "typescript": "^4.9.4",
-    "wrap-ansi": "^8.0.1"
-  },
-  "optionalDependencies": {
-    "sharp": "^0.31.3"
+    "tsup": "^7.1.0",
+    "type-fest": "^3.12.0",
+    "typescript": "^5.1.3",
+    "wrap-ansi": "^8.1.0"
   },
   "peerDependencies": {
-    "esbuild": "^0.17.3",
-    "postcss": "^8.4.16",
-    "sass": "^1.54.5",
-    "svg-sprite": "^1.5.4",
-    "svgo": "^2.8.0"
+    "esbuild": "^0.18.10",
+    "postcss": "^8.4.24",
+    "sass": "^1.63.6",
+    "sharp": "^0.32.1",
+    "svg-sprite": "^2.0.2",
+    "svgo": "^3.0.2",
+    "tailwindcss": "^3.3.2"
+  },
+  "peerDependenciesMeta": {
+    "esbuild":{
+      "optional": true
+    },
+    "postcss":{
+      "optional": true
+    },
+    "sass":{
+      "optional": true
+    },
+    "sharp":{
+      "optional": true
+    },
+    "svgo":{
+      "optional": true
+    },
+    "svgo-sprite": {
+      "optional": true
+    },
+    "tailwindcss": {
+      "optional": true
+    }
   }
 }
