--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "anymatch": "^3.1.3",
     "axios": "^1.4.0",
     "chokidar": "^3.5.3",
+    "clean-css": "^5.3.2",
     "cross-spawn": "^7.0.3",
     "dotenv": "^16.3.1",
     "fast-glob": "^3.2.12",
@@ -81,6 +82,7 @@
     "mime-types": "^2.1.35",
     "minimist": "^1.2.8",
     "node-notifier": "^10.0.1",
+    "p-map": "^6.0.0",
     "prompts": "^2.4.2",
     "serve-static": "^1.15.0",
     "turndown": "^7.1.2",
@@ -132,19 +134,19 @@
     "tailwindcss": "^3.3.2"
   },
   "peerDependenciesMeta": {
-    "esbuild":{
+    "esbuild": {
       "optional": true
     },
-    "postcss":{
+    "postcss": {
       "optional": true
     },
-    "sass":{
+    "sass": {
       "optional": true
     },
-    "sharp":{
+    "sharp": {
       "optional": true
     },
-    "svgo":{
+    "svgo": {
       "optional": true
     },
     "svgo-sprite": {
