--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
   "main": "./dist/index.js",
   "bin": {
     "syncify": "dist/cli.js",
-    "sync": "dist/cli.js"
+    "sy": "dist/cli.js"
   },
   "scripts": {
     "dev": "tsup --watch",
@@ -66,29 +66,30 @@
     }
   },
   "dependencies": {
+    "@liquify/highlight": "^0.1.0",
     "anymatch": "^3.1.3",
-    "axios": "^1.4.0",
+    "axios": "^1.5.0",
     "chokidar": "^3.5.3",
     "clean-css": "^5.3.2",
     "cross-spawn": "^7.0.3",
     "dotenv": "^16.3.1",
-    "fast-glob": "^3.2.12",
+    "fast-glob": "^3.3.1",
     "finalhandler": "^1.2.0",
     "fs-extra": "^11.1.1",
     "gray-matter": "^4.0.3",
     "html-minifier-terser": "7.2.0",
-    "html-to-image": "^1.11.11",
     "load-tsconfig": "^0.2.5",
     "markdown-it": "^13.0.1",
-    "mime-types": "^2.1.35",
     "minimist": "^1.2.8",
     "morphdom": "^2.7.0",
     "node-notifier": "^10.0.1",
+    "open-editor": "^4.1.1",
     "p-map": "^6.0.0",
+    "pathe": "^1.1.1",
     "prompts": "^2.4.2",
     "serve-static": "^1.15.0",
+    "tree-kill": "^1.2.2",
     "turndown": "^7.1.2",
-    "turndown-plugin-gfm": "^1.0.2",
     "ws": "^8.13.0"
   },
   "devDependencies": {
@@ -98,42 +99,43 @@
     "@types/fs-extra": "^11.0.1",
     "@types/mime-types": "^2.1.1",
     "@types/minimist": "^1.2.2",
+    "@types/prompts": "^2.4.4",
     "@types/serve-static": "^1.15.2",
     "@types/svg-sprite": "^0.0.34",
     "@types/ws": "^8.5.5",
     "ansis": "^1.5.5",
     "ava": "^5.3.1",
     "clean-stack": "^5.2.0",
-    "esbuild": "^0.18.10",
-    "eslint": "^8.43.0",
+    "esbuild": "^0.19.2",
+    "eslint": "^8.48.0",
     "log-update": "^5.0.1",
     "mergerino": "^0.4.0",
     "mithril": "^2.2.2",
-    "p-queue": "^7.3.4",
-    "postcss": "^8.4.24",
-    "prettier": "^2.8.8",
-    "rambdax": "^9.1.1",
-    "sass": "^1.63.6",
-    "sharp": "^0.32.1",
-    "strip-json-comments": "^5.0.0",
+    "p-queue": "^7.4.1",
+    "postcss": "^8.4.29",
+    "prettier": "^3.0.3",
+    "rambdax": "^10.0.0",
+    "sass": "^1.66.1",
+    "sharp": "^0.32.5",
+    "strip-json-comments": "^5.0.1",
     "svg-sprite": "^2.0.2",
     "svgo": "^3.0.2",
-    "tailwindcss": "^3.3.2",
-    "tiny-spinner": "^2.0.0",
+    "tailwindcss": "^3.3.3",
+    "tiny-spinner": "^2.0.3",
     "tsconfig-type": "^1.27.0",
-    "tsup": "^7.1.0",
-    "type-fest": "^3.12.0",
-    "typescript": "^5.1.3",
+    "tsup": "^7.2.0",
+    "type-fest": "^4.3.1",
+    "typescript": "^5.2.2",
     "wrap-ansi": "^8.1.0"
   },
   "peerDependencies": {
-    "esbuild": "^0.18.10",
-    "postcss": "^8.4.24",
-    "sass": "^1.63.6",
-    "sharp": "^0.32.1",
+    "esbuild": "^0.19.2",
+    "postcss": "^8.4.29",
+    "sass": "^1.66.1",
+    "sharp": "^0.32.5",
     "svg-sprite": "^2.0.2",
     "svgo": "^3.0.2",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "^3.3.3"
   },
   "peerDependenciesMeta": {
     "esbuild": {
