project overhaul and tidy up

--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,69 @@ test/minify/html.test.mjs
 test/logs/warnings.test.js
 test/logs/tui.test.js
 test/logs/spawns.test.js
+lib/api.ts
+lib/cli/ansi.ts
+lib/cli/emitters.ts
+lib/cli/progress.ts
+lib/const.ts
+lib/hot/inject.ts
+lib/hot/server.ts
+lib/hot/snippet.ts
+lib/log/errors.ts
+lib/log/help.ts
+lib/log/index.ts
+lib/log/loggers.ts
+lib/log/spinner.ts
+lib/log/start.ts
+lib/log/stdin.ts
+lib/log/tui.ts
+lib/log/validate.ts
+lib/log/warnings.ts
+lib/model/$.ts
+lib/model/defaults.ts
+lib/model/plugins.ts
+lib/model/processor.ts
+lib/model/terser.ts
+lib/modes/build.ts
+lib/modes/download.ts
+lib/modes/upload.ts
+lib/modes/watch.ts
+lib/options/define.ts
+lib/options/dirs.ts
+lib/options/files.ts
+lib/options/filters.ts
+lib/options/hot.ts
+lib/options/json.ts
+lib/options/modes.ts
+lib/options/pages.ts
+lib/options/paths.ts
+lib/options/script.ts
+lib/options/sections.ts
+lib/options/snippets.ts
+lib/options/spawn.ts
+lib/options/stores.ts
+lib/options/style.ts
+lib/options/svgs.ts
+lib/options/terser.ts
+lib/options/utilities.ts
+lib/options/validate.ts
+lib/process/caches.ts
+lib/process/context.ts
+lib/process/files.ts
+lib/requests/assets.ts
+lib/requests/client.ts
+lib/requests/metafields.ts
+lib/requests/pages.ts
+lib/transform/asset.ts
+lib/transform/json.ts
+lib/transform/liquid.ts
+lib/transform/pages.ts
+lib/transform/script.ts
+lib/transform/styles.ts
+lib/transform/svgs.ts
+lib/utils/native.ts
+lib/utils/options.ts
+lib/utils/paths.ts
+lib/utils/require.ts
+lib/utils/timer.ts
+lib/utils/utils.ts
