--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,46 +8,50 @@
     "docs"
   ],
   "include": [
-    "lib/**/*.ts"
+    "lib/**/*.ts",
+    "types/*.d.ts",
+    "types/internal/cli.d.ts",
+    "types/internal/internal.d.ts"
   ],
   "typeAcquisition": {
     "enable": true,
     "include": [
       "node",
-      "./types/modules/"
     ]
   },
   "compilerOptions": {
-    "types": [
-      "node"
-    ],
     "incremental": true,
     "target": "ESNext",
     "removeComments": true,
     "lib": [
+      "ESNext",
       "es2020",
       "DOM"
     ],
     "module": "CommonJS",
-    "alwaysStrict": true,
-    "allowUmdGlobalAccess": true,
-    "experimentalDecorators": true,
-    "allowSyntheticDefaultImports": true,
-    "importsNotUsedAsValues": "remove",
-    "esModuleInterop": true,
-    "resolveJsonModule": true,
+    "declaration": false,
     "preserveSymlinks": true,
-    "skipDefaultLibCheck": false,
+    "allowSyntheticDefaultImports": true,
+    "keyofStringsOnly": true,
+    "esModuleInterop": true,
+    "ignoreDeprecations": "5.0",
+    "resolveJsonModule": true,
     "moduleResolution": "node",
-    "noEmitOnError": false,
-    "noUnusedLocals": false,
-    "noUnusedParameters": true,
-    "pretty": true,
+    "noImplicitThis": false,
+    "skipDefaultLibCheck": true,
+    "noStrictGenericChecks": true,
+    "noEmit": true,
+    "suppressExcessPropertyErrors": true,
+    "noEmitOnError": true,
+    "noUnusedLocals": true,
     "rootDir": "lib",
     "baseUrl": ".",
     "paths": {
       "types": [
         "./types/index.d.ts"
+      ],
+      "types/internal": [
+        "./types/internal.d.ts"
       ],
       "~state": [
         "./lib/model/$.ts"
@@ -89,8 +93,20 @@
         "./lib/log/*.ts",
         "!./src/log/index.ts"
       ],
+      "~native": [
+        "./lib/utils/native.ts"
+      ],
+      "~timer": [
+        "./lib/utils/timer.ts"
+      ],
+      "~chars": [
+        "./lib/utils/chars.ts"
+      ],
+      "~utils": [
+        "./lib/utils/utils.ts"
+      ],
       "~utils/*": [
-        "./lib/utils/*"
+        "./lib/utils/*",
       ]
     }
   }
