--- a/package.json
+++ b/package.json
@@ -106,7 +106,6 @@
     "prompts": "^2.4.2",
     "serve-static": "^1.15.0",
     "tree-kill": "^1.2.2",
-    "turndown": "^7.1.2",
     "write-file-atomic": "^5.0.1",
     "ws": "^8.14.2"
   },
@@ -114,6 +113,7 @@
     "@liquify/schema": "^0.8.4",
     "@syncify/eslint-config": "workspace:^",
     "@syncify/prettier-config": "workspace:^",
+    "@syncify/turndown": "workspace:^",
     "@types/finalhandler": "^1.2.2",
     "@types/fs-extra": "^11.0.3",
     "@types/mime-types": "^2.1.3",
@@ -129,8 +129,6 @@
     "eslint": "^8.51.0",
     "log-update": "^5.0.1",
     "mergerino": "^0.4.0",
-    "mithril": "^2.2.2",
-    "morphdom": "^2.7.1",
     "p-map": "^6.0.0",
     "p-queue": "^7.4.1",
     "parse-json": "^7.1.0",
