--- a/straps/dusk-advanced/package.json
+++ b/straps/dusk-advanced/package.json
@@ -20,10 +20,7 @@
   },
   "syncify": {
     "stores": {
-      "domain": "syncify",
-      "themes": {
-        "dev": 136656060657
-      }
+      "domain": "syncify"
     }
   },
   "prettier": "@syncify/prettier-config",
@@ -35,6 +32,7 @@
     "@types/gtag.js": "^0.0.17",
     "autoprefixer": "^10.4.16",
     "esbuild": "^0.19.5",
+    "postcss": "^8.4.31",
     "svg-sprite": "^2.0.2",
     "svgo": "^3.0.2",
     "tailwindcss": "^3.3.3",
