--- a/examples/using-sass/.liquidrc.json
+++ b/examples/using-sass/.liquidrc.json
@@ -14,7 +14,9 @@
     ]
   },
   "format": {
-    "ignore": [],
+    "ignore": [
+      "theme/**/*"
+    ],
     "liquid": {
       "commentIndent": true,
       "forceFilter": 3,
