--- a/examples/using-sass/.vscode/extensions.json
+++ b/examples/using-sass/.vscode/extensions.json
@@ -6,6 +6,7 @@
   "recommendations": [
     "vscode-icons-team.vscode-icons",
     "sissel.shopify-liquid",
-    "dbaeumer.vscode-eslint"
+    "dbaeumer.vscode-eslint",
+    "zignd.html-css-class-completion"
   ]
 }
