--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@ test/e2e/custom/dist
 dump.rdb
 docs/
 tests/
-**/dist
+packages/**/dist
 straps/dusk-advanced/theme
 
 lib-cov
@@ -45,94 +45,7 @@ package
 theme
 yarn.lock
 versions
-test/views/sections/cart-items.liquid
-test/views/pages/samples/markdown.txt
-test/views/pages/samples/html.txt
-test/views/pages/markdown.test.mjs
-test/views/pages/frontmatter.test.mjs
-test/units/prompts.test.js
-test/units/plugins.test.js
-test/units/cli.test.js
-test/units/api.test.js
-test/paths/snippets.test.js
-test/paths/sections.test.js
-test/paths/directories.test.js
-test/options/utilities.test.mjs
-test/options/scripts.test.mjs
-test/options/files/utilities.js
-test/options/files/scripts.js
-test/minify/samples/text.txt
-test/minify/liquid.test.mjs
-test/minify/html.test.mjs
-test/logs/warnings.test.js
-test/logs/tui.test.js
-test/logs/spawns.test.js
-lib/api.ts
-lib/cli/ansi.ts
-lib/cli/emitters.ts
-lib/cli/progress.ts
-lib/const.ts
-lib/hot/inject.ts
-lib/hot/server.ts
-lib/hot/snippet.ts
-lib/log/errors.ts
-lib/log/help.ts
-lib/log/index.ts
-lib/log/loggers.ts
-lib/log/spinner.ts
-lib/log/start.ts
-lib/log/stdin.ts
-lib/log/tui.ts
-lib/log/validate.ts
-lib/log/warnings.ts
-lib/model/$.ts
-lib/model/defaults.ts
-lib/model/plugins.ts
-lib/model/processor.ts
-lib/model/terser.ts
-lib/modes/build.ts
-lib/modes/download.ts
-lib/modes/upload.ts
-lib/modes/watch.ts
-lib/options/define.ts
-lib/options/dirs.ts
-lib/options/files.ts
-lib/options/filters.ts
-lib/options/hot.ts
-lib/options/json.ts
-lib/options/modes.ts
-lib/options/pages.ts
-lib/options/paths.ts
-lib/options/script.ts
-lib/options/sections.ts
-lib/options/snippets.ts
-lib/options/spawn.ts
-lib/options/stores.ts
-lib/options/style.ts
-lib/options/svgs.ts
-lib/options/terser.ts
-lib/options/utilities.ts
-lib/options/validate.ts
-lib/process/caches.ts
-lib/process/context.ts
-lib/process/files.ts
-lib/requests/assets.ts
-lib/requests/client.ts
-lib/requests/metafields.ts
-lib/requests/pages.ts
-lib/transform/asset.ts
-lib/transform/json.ts
-lib/transform/liquid.ts
-lib/transform/pages.ts
-lib/transform/script.ts
-lib/transform/styles.ts
-lib/transform/svgs.ts
-lib/utils/native.ts
-lib/utils/options.ts
-lib/utils/paths.ts
-lib/utils/require.ts
-lib/utils/timer.ts
-lib/utils/utils.ts
+
 
 .env*
 .flaskenv*
