--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@syncify/cli",
   "description": "The next generation build tool for Shopify theme development.",
   "version": "0.3.0-beta",
-  "license": "MIT",
+  "license": "CC BY-NC-ND 4.0",
   "homepage": "https://github.com/panoply/syncify",
   "bugs": "https://github.com/panoply/syncify/issues",
   "repository": {
@@ -44,27 +44,25 @@
     "syncify": "dist/cli.js",
     "sy": "dist/cli.js"
   },
-  "types": "./types/index.d.ts",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "exports": {
     "import": "./dist/index.mjs",
+    "types": "./types/index.d.ts",
     "require": "./dist/index.js"
   },
   "scripts": {
     "dev": "tsup --watch",
     "build": "tsup --minify",
-    "syncify": "dist/cli.js"
+    "syncify": "dist/cli.js",
+    "@docs": "pnpm -F @syncify/docs",
+    "@hot": "pnpm -F @syncify/hot",
+    "@turndown": "pnpm -F @syncify/turndown"
   },
   "prettier": "@syncify/prettier-config",
   "eslintConfig": {
     "extends": "@syncify/eslint-config",
-    "ignorePatterns": [
-      "docs",
-      "dist",
-      "**/theme",
-      "test/e2e/theme"
-    ],
+    "ignorePatterns": ["docs", "dist", "**/theme", "test/e2e/theme"],
     "rules": {
       "object-curly-newline": "off",
       "no-import-assign": "off",
@@ -85,17 +83,16 @@
   },
   "dependencies": {
     "@syncify/turndown": "^0.2.0",
-    "adm-zip": "^0.5.15",
-    "axios": "^1.7.3",
+    "adm-zip": "^0.5.16",
+    "axios": "^1.7.5",
     "cbor": "^9.0.2",
     "chokidar": "^3.6.0",
     "clean-css": "^5.3.3",
     "cross-spawn": "^7.0.3",
     "dotenv": "^16.4.5",
     "enquirer": "^2.4.1",
-    "esbuild": "^0.23.0",
+    "esbuild": "^0.23.1",
     "fast-glob": "^3.3.2",
-    "finalhandler": "^1.2.0",
     "fs-extra": "^11.2.0",
     "gray-matter": "^4.0.3",
     "html-minifier-terser": "7.2.0",
@@ -106,44 +103,39 @@
     "postcss": "^8.4.41",
     "postcss-load-config": "^6.0.1",
     "prompts": "^2.4.2",
-    "serve-static": "^1.15.0",
     "svg-sprite": "^2.0.4",
     "svgo": "^3.3.2",
-    "ws": "^8.18.0"
+    "uWebSockets.js": "github:uNetworking/uWebSockets.js#v20.48.0"
   },
   "devDependencies": {
     "@liquify/schema": "^0.9.5",
     "@syncify/eslint-config": "workspace:^",
     "@syncify/prettier-config": "workspace:^",
-    "@types/finalhandler": "^1.2.3",
     "@types/fs-extra": "^11.0.4",
     "@types/mime-types": "^2.1.4",
     "@types/minimist": "^1.2.5",
     "@types/prompts": "^2.4.9",
-    "@types/serve-static": "^1.15.7",
     "@types/svg-sprite": "^0.0.39",
-    "@types/ws": "^8.5.12",
     "ansis": "^3.3.2",
     "anymatch": "^3.1.3",
     "ava": "^6.1.3",
     "clean-stack": "^5.2.0",
-    "eslint": "^9.9.0",
+    "eslint": "^8.56.0",
     "log-update": "^6.1.0",
-    "mergerino": "^0.4.0",
     "minimist": "^1.2.8",
     "p-map": "^7.0.2",
     "p-queue": "^8.0.1",
     "parse-json": "^8.1.0",
     "prettier": "^3.3.3",
-    "rambdax": "^11.1.1",
+    "rambdax": "^11.2.0",
     "sass": "^1.77.8",
-    "sharp": "^0.33.4",
+    "sharp": "^0.33.5",
     "strip-json-comments": "^5.0.1",
-    "tailwindcss": "^3.4.9",
+    "tailwindcss": "^3.4.10",
     "tree-kill": "^1.2.2",
     "tsconfig-type": "^1.29.0",
     "tsup": "^8.2.4",
-    "type-fest": "^4.24.0",
+    "type-fest": "^4.26.0",
     "typescript": "^5.5.4",
     "wrap-ansi": "^9.0.0",
     "write-file-atomic": "^5.0.1"
