--- a/examples/using-schema/package.json
+++ b/examples/using-schema/package.json
@@ -31,6 +31,6 @@
     }
   },
   "devDependencies": {
-    "@syncify/cli": "workspace:0.3.0-beta"
+    "@syncify/cli": "workspace:0.0.1-rc.1"
   }
 }
