--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -2,6 +2,10 @@ packages:
   - "."
   - "docs"
   - "packages/configs/*"
-  - "packages/*"
-  - "examples/*"
+  - "packages/utils"
+  - "packages/hot"
+  - "packages/ansi"
+  - "packages/turndown"
+  - "packages/schema"
+ # - "examples/*"
   - "straps/test"
