--- a/package.json
+++ b/package.json
@@ -36,13 +36,13 @@
     "shopify cli"
   ],
   "engines": {
-    "pnpm": ">=7",
-    "node": ">=14",
+    "pnpm": ">=9",
+    "node": ">=20",
     "vscode": "^1.22.0"
   },
   "bin": {
-    "syncify": "dist/cli.js",
-    "sy": "dist/cli.js"
+    "syncify": "./dist/cli.js",
+    "sy": "./dist/cli.js"
   },
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
@@ -62,7 +62,11 @@
   "prettier": "@syncify/prettier-config",
   "eslintConfig": {
     "extends": "@syncify/eslint-config",
-    "ignorePatterns": ["docs", "dist", "**/theme", "test/e2e/theme"],
+    "ignorePatterns": [
+      "dist",
+      "**/theme",
+      "test/e2e/theme"
+    ],
     "rules": {
       "object-curly-newline": "off",
       "no-import-assign": "off",
@@ -82,13 +86,13 @@
     }
   },
   "dependencies": {
-    "@syncify/turndown": "^0.2.0",
+    "@syncify/ansi": "workspace:^",
+    "@syncify/turndown": "workspace:^",
     "adm-zip": "^0.5.16",
-    "axios": "^1.7.5",
+    "axios": "^1.7.7",
     "cbor": "^9.0.2",
     "chokidar": "^3.6.0",
     "clean-css": "^5.3.3",
-    "cross-spawn": "^7.0.3",
     "dotenv": "^16.4.5",
     "enquirer": "^2.4.1",
     "esbuild": "^0.23.1",
@@ -99,10 +103,8 @@
     "markdown-it": "^14.1.0",
     "ngrok": "5.0.0-beta.2",
     "node-notifier": "^10.0.1",
-    "pathe": "^1.1.2",
-    "postcss": "^8.4.41",
+    "postcss": "^8.4.45",
     "postcss-load-config": "^6.0.1",
-    "prompts": "^2.4.2",
     "svg-sprite": "^2.0.4",
     "svgo": "^3.3.2",
     "uWebSockets.js": "github:uNetworking/uWebSockets.js#v20.48.0"
@@ -113,29 +115,24 @@
     "@syncify/prettier-config": "workspace:^",
     "@types/fs-extra": "^11.0.4",
     "@types/mime-types": "^2.1.4",
-    "@types/minimist": "^1.2.5",
-    "@types/prompts": "^2.4.9",
     "@types/svg-sprite": "^0.0.39",
-    "ansis": "^3.3.2",
     "anymatch": "^3.1.3",
-    "ava": "^6.1.3",
     "clean-stack": "^5.2.0",
     "eslint": "^8.56.0",
     "log-update": "^6.1.0",
-    "minimist": "^1.2.8",
     "p-map": "^7.0.2",
     "p-queue": "^8.0.1",
     "parse-json": "^8.1.0",
     "prettier": "^3.3.3",
     "rambdax": "^11.2.0",
-    "sass": "^1.77.8",
+    "sass": "^1.78.0",
     "sharp": "^0.33.5",
     "strip-json-comments": "^5.0.1",
     "tailwindcss": "^3.4.10",
     "tree-kill": "^1.2.2",
     "tsconfig-type": "^1.29.0",
     "tsup": "^8.2.4",
-    "type-fest": "^4.26.0",
+    "type-fest": "^4.26.1",
     "typescript": "^5.5.4",
     "wrap-ansi": "^9.0.0",
     "write-file-atomic": "^5.0.1"
