--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,7 +21,7 @@
     "**/CVS": true,
     "**/.DS_Store": true,
     "**/Thumbs.db": true,
-    "**/node_modules": false,
+    "**/node_modules": true
     // "**/node_modules/.syncify": false
     //"**/example": true
   },
@@ -135,6 +135,7 @@
   ],
   "cSpell.words": [
     "adastra",
+    "capailibilites",
     "gzipsize",
     "imgmin",
     "linkify",
