--- a/packages/configs/tsconfig/package.json
+++ b/packages/configs/tsconfig/package.json
@@ -3,10 +3,7 @@
   "version": "0.1.0",
   "private": false,
   "license": "MIT",
-  "files": [
-    "./browser.json",
-    "./node.json"
-  ],
+  "files": ["./browser.json", "./node.json"],
   "author": {
     "name": "ΝΙΚΟΛΑΣ ΣΑΒΒΙΔΗΣ",
     "url": "https://github.com/panoply",
