--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
   "prettier": "@syncify/prettier-config",
   "eslintConfig": {
     "extends": "@syncify/eslint-config",
-    "ignorePatterns": ["dist", "**/theme", "test/e2e/theme"],
+    "ignorePatterns": ["dist", "**/theme", "test/e2e/theme", "hot.min.js"],
     "rules": {
       "object-curly-newline": "off",
       "no-import-assign": "off",
@@ -82,16 +82,17 @@
     }
   },
   "dependencies": {
-    "@syncify/ansi": "workspace:^",
     "@syncify/turndown": "workspace:^",
     "adm-zip": "^0.5.16",
     "axios": "^1.7.7",
     "cbor": "^9.0.2",
-    "chokidar": "^3.6.0",
+    "chokidar": "^4.0.1",
+    "chrome-launcher": "^1.1.2",
+    "chrome-remote-interface": "^0.33.2",
     "clean-css": "^5.3.3",
     "dotenv": "^16.4.5",
     "enquirer": "^2.4.1",
-    "esbuild": "^0.23.1",
+    "esbuild": "^0.24.0",
     "fast-glob": "^3.3.2",
     "fs-extra": "^11.2.0",
     "gray-matter": "^4.0.3",
@@ -99,7 +100,7 @@
     "markdown-it": "^14.1.0",
     "ngrok": "5.0.0-beta.2",
     "node-notifier": "^10.0.1",
-    "postcss": "^8.4.45",
+    "postcss": "^8.4.47",
     "postcss-load-config": "^6.0.1",
     "svg-sprite": "^2.0.4",
     "svgo": "^3.3.2",
@@ -107,11 +108,14 @@
   },
   "devDependencies": {
     "@liquify/schema": "^0.9.5",
+    "@syncify/ansi": "workspace:^",
     "@syncify/eslint-config": "workspace:^",
     "@syncify/prettier-config": "workspace:^",
+    "@types/chrome-remote-interface": "^0.31.14",
     "@types/fs-extra": "^11.0.4",
     "@types/mime-types": "^2.1.4",
     "@types/svg-sprite": "^0.0.39",
+    "@types/write-file-atomic": "^4.0.3",
     "anymatch": "^3.1.3",
     "clean-stack": "^5.2.0",
     "eslint": "^8.56.0",
@@ -121,17 +125,17 @@
     "parse-json": "^8.1.0",
     "prettier": "^3.3.3",
     "rambdax": "^11.2.0",
-    "sass": "^1.78.0",
+    "sass": "^1.79.4",
     "sharp": "^0.33.5",
     "strip-json-comments": "^5.0.1",
-    "tailwindcss": "^3.4.10",
+    "tailwindcss": "^3.4.13",
     "tree-kill": "^1.2.2",
     "tsconfig-type": "^1.29.0",
-    "tsup": "^8.2.4",
+    "tsup": "^8.3.0",
     "type-fest": "^4.26.1",
-    "typescript": "^5.5.4",
+    "typescript": "^5.6.2",
     "wrap-ansi": "^9.0.0",
-    "write-file-atomic": "^5.0.1"
+    "write-file-atomic": "^6.0.0"
   },
   "peerDependencies": {
     "sass": "^1.69.4",
