--- a/examples/using-sass/syncify.config.json
+++ b/examples/using-sass/syncify.config.json
@@ -23,9 +23,7 @@
         "input": "source/assets/styles/bootstrap.scss",
         "rename": "bootstrap.min.[ext]",
         "sass": {
-          "include": [
-            "node_modules/bootstrap"
-          ]
+          "include": ["node_modules/bootstrap"]
         }
       },
       {
