--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -7,5 +7,8 @@ packages:
   - "packages/ansi"
   - "packages/turndown"
   - "packages/schema"
+  - "packages/uws"
+  - "examples/using-paths"
+  - "examples/using-tailwind"
  # - "examples/*"
   - "straps/test"
