--- a/.gitmodules
+++ b/.gitmodules
@@ -1,15 +1,21 @@
-[submodule "examples/using-paths"]
-	path = examples/using-paths
-	url = https://github.com/syncify-straps/using-paths
-[submodule "examples/using-rename"]
-	path = examples/using-rename
-	url = https://github.com/syncify-straps/using-rename
-[submodule "examples/using-sass"]
-	path = examples/using-sass
-	url = https://github.com/syncify-straps/using-sass
-[submodule "examples/using-schema"]
-	path = examples/using-schema
-	url = https://github.com/syncify-straps/using-schema
-[submodule "examples/using-tailwind"]
-	path = examples/using-tailwind
-	url = https://github.com/syncify-straps/using-tailwind
+# THEMES
+[submodule "straps/themes/dusk"]
+	path = straps/themes/dusk
+	url = https://github.com/SyncifyCLI/dusk
+
+# USAGE EXAMPLES
+[submodule "straps/examples/using-paths"]
+	path = straps/examples/using-paths
+	url = https://github.com/SyncifyCLI/using-paths
+[submodule "straps/examples/using-rename"]
+	path = straps/examples/using-rename
+	url = https://github.com/SyncifyCLI/using-rename
+[submodule "straps/examples/using-sass"]
+	path = straps/examples/using-sass
+	url = https://github.com/SyncifyCLI/using-sass
+[submodule "straps/examples/using-schema"]
+	path = straps/examples/using-schema
+	url = https://github.com/SyncifyCLI/using-schema
+[submodule "straps/examples/using-tailwind"]
+	path = straps/examples/using-tailwind
+	url = https://github.com/SyncifyCLI/using-tailwind
