--- a/package.json
+++ b/package.json
@@ -89,8 +89,8 @@
   },
   "dependencies": {
     "@npmcli/package-json": "^6.0.1",
-    "@syncify/turndown": "^0.2.0",
-    "@syncify/uws": "^0.1.1",
+    "@syncify/turndown": "workspace:^",
+    "@syncify/uws": "workspace:^",
     "adm-zip": "^0.5.16",
     "axios": "^1.7.7",
     "cbor": "^9.0.2",
@@ -102,11 +102,11 @@
     "enquirer": "^2.4.1",
     "esbuild": "^0.24.0",
     "fast-glob": "^3.3.2",
+    "form-data": "^4.0.1",
     "fs-extra": "^11.2.0",
     "gray-matter": "^4.0.3",
     "html-minifier-terser": "7.2.0",
     "markdown-it": "^14.1.0",
-    "ngrok": "5.0.0-beta.2",
     "node-notifier": "^10.0.1",
     "postcss": "^8.4.47",
     "postcss-load-config": "^6.0.1",
@@ -118,22 +118,25 @@
     "@syncify/ansi": "workspace:^",
     "@syncify/eslint-config": "workspace:^",
     "@syncify/prettier-config": "workspace:^",
+    "@types/adm-zip": "^0.5.5",
     "@types/chrome-remote-interface": "^0.31.14",
     "@types/fs-extra": "^11.0.4",
     "@types/mime-types": "^2.1.4",
+    "@types/node": "^22.7.5",
+    "@types/node-notifier": "^8.0.5",
     "@types/npmcli__package-json": "^4.0.4",
     "@types/svg-sprite": "^0.0.39",
     "@types/write-file-atomic": "^4.0.3",
+    "Panoply": "link:../..",
     "anymatch": "^3.1.3",
-    "clean-stack": "^5.2.0",
     "eslint": "^8.56.0",
-    "log-update": "^6.1.0",
+    "get-port": "^7.1.0",
     "p-map": "^7.0.2",
     "p-queue": "^8.0.1",
     "parse-json": "^8.1.0",
     "prettier": "^3.3.3",
     "rambdax": "^11.2.0",
-    "sass": "^1.79.4",
+    "sass": "^1.79.5",
     "sharp": "^0.33.5",
     "strip-json-comments": "^5.0.1",
     "tailwindcss": "^3.4.13",
@@ -141,8 +144,7 @@
     "tsconfig-type": "^1.29.0",
     "tsup": "^8.3.0",
     "type-fest": "^4.26.1",
-    "typescript": "^5.6.2",
-    "wrap-ansi": "^9.0.0",
+    "typescript": "^5.6.3",
     "write-file-atomic": "^6.0.0"
   },
   "pnpm": {
