--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -136,6 +136,7 @@
   "cSpell.words": [
     "adastra",
     "capailibilites",
+    "extensabilities",
     "gzipsize",
     "imgmin",
     "linkify",
@@ -146,6 +147,7 @@
     "Spriter",
     "syver",
     "tailwindcss",
+    "tsize",
     "twoslash"
   ]
 }
